# flights-api

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  flights_example.json  passengers_20.json  pyproject.toml  requirements.txt
.windsurf/rules/: project-instructions.md
app/: crud.py  database.py  health.py  main.py  models.py  priority.py
app/api/: flights.py
app/core/: config.py  database.py  json_encoders.py
app/models/: flight.py
app/routers/: flights.py
app/schemas/: flight.py  passenger.py
app/scripts/: seed_data.py
app/services/: flight_service.py
tests/: conftest.py  test_flights.py
